# mkslides

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  marp_test.py  mkslides.yml  my_3rd.yml  pyproject.toml  requirements.txt  setup.py
.github/: README.md
.github/workflows/: bump-version.yml  main.yml  python-package.yml  release.yml
decks/: my-example-deck.html  my-example-deck.md
example/: mkslides.yml
example/decks/: my-slide-deck.html  my-slide-deck.md
example/slides/: cover.md
gallery/decks/: my-example-deck.html
gallery/slides/: slide2.md
mkslides/: __init__.py  config.py  deck.py  main.py  marp.py  utils.py
slides/: slide1.md
tests/: README.md  test_configs.yml  test_utils.py
