[tool.poetry]
name = "mkslides"
version = "0.1.0"
description = "Mkdocs for slides. Decouple slides from their decks with markdown and yaml configuration."
authors = ["cldixon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.5.2"
click = "^8.1.7"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.6"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
